client/src/styles.css
@import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps');

/* Document Defaults */
body, html{
    margin: 0;
    padding: 0;
    font-family: 'Helvetica', sans-serif;
    overflow: visible;
    user-select: none;
    outline: none;
    overflow: hidden;
}

h1, h2, h3, h4, h5, h6, p {
    margin: 0;
    padding: 0;
    font-weight: normal;
}

h1:hover,
h2:hover,
h3:hover,
h4:hover,
h5:hover,
h6:hover
 {
    cursor: default;
}

a:hover, 
button:hover
{
    cursor: pointer;
}

.success-btn {
    background: rgb(11, 146, 11);
    color: #FFF;
    border: 0;
    border-radius: 5px;
}

.success-btn:hover {
    background: rgb(19, 211, 19);
}

.danger-btn {
    background: rgb(197, 52, 52);
    color: #FFF;
    border: 0;
    border-radius: 5px;
}

.danger-btn:hover {
    background: rgb(255, 71, 71);
}

.component-container {
    height: 100vh;
    width: 100%;
    background: linear-gradient(to bottom right, rgb(16, 16, 17), rgb(53, 53, 53));
    color: #FFF;
}

/* Alignment Classes */
.flex-row-start {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

.flex-row-evenly {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.flex-row-center {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.flex-row-between {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.flex-col-start {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.flex-col-evenly {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.flex-col-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.flex-col-between {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.wrap {
    flex-wrap: wrap;
}

/* Color theme Classes */

/*  app background color.  layer 0  */
.accent05{
    background: rgb(223, 206, 196);
    color: #3A4E48;
}

/* toolbar style btns  and style cards*/
.greenAccent01{
    background: #60695C;
    color: #D6F9DD;
}

/*  toolbar style btns container */
.greenAccent02{
    background: rgb(63, 78, 66);
    color: rgb(255, 209, 82)
}

/* main interface theme */
.grayAccent01{
    background: rgb(34, 34, 34);
    color: rgb(255, 255, 255)
}

/*  interface 2 theme */
.grayAccent02{
    background: rgb(65, 65, 65);
    color: rgb(231, 231, 231)
}

/* interface 3 theme */
.grayAccent03{
    background: rgb(255, 255, 255);
    color: rgb(99, 99, 99)
}

.loader {
    animation: rotate linear 1s infinite;
    width: 25px !important; 
    height: 25px !important; 
    margin: 0 !important; 
    padding: 15px !important; 
    font-size: 25px !important; 
    transform-origin: 50% 50% !important; 
}

.ng-resizable-handle.ng-resizable-se {
    display: none !important;
}

@keyframes rotate {
    100% { transform: rotate(360deg); }
  }

